--- a/.app/pages/tags.njk
+++ b/.app/pages/tags.njk
@@ -26,3 +26,7 @@ panel: false
     </div>
   </div>
 </main>
+
+<div class="theme-switcher-container">
+  {% include 'partials/theme-switcher.njk' %}
+</div>
