--- a/.app/_includes/partials/panel.njk
+++ b/.app/_includes/partials/panel.njk
@@ -1,22 +1,7 @@
 {% from 'macros/bookmark-toggle.njk' import bookmarkToggle %}
 {% from 'macros/edit-this-note.njk' import editThisNote %}
 
-<aside class="content-block stack" data-stack="6">
-  {% set toc = content | toc %}
-  {% if toc | length %}
-  <div class="toc">
-    <h2 class="toc__label" id="app-panel-toc">Table of Contents</h2>
-    <ul class="toc__list" role="list" aria-labelledby="app-panel-toc">
-      {% for item in toc %}
-      <li style="--level: {{ item.level }}" class="toc__item">
-        <a href="#{{ item.id }}" class="toc__link">
-          {{ item.text | safe }}
-        </a>
-      </li>
-      {% endfor %}
-    </ul>
-  </div>
-  {% endif %}
+<aside class="content-block stack">
 
   {% if tags | length %}
   <div class="grouped-links">
@@ -84,8 +69,12 @@
   </div>
   {% endif %}
 
-  <div class="inline">
-    {{ bookmarkToggle(page.url | htmlBaseUrl ) }}
-    {{ editThisNote(app.editThisNote, page) }}
+  <div class="actions cluster">
+    <div class="cluster">
+      {{ bookmarkToggle(page.url | htmlBaseUrl ) }}
+      {{ editThisNote(app.editThisNote, page) }}
+    </div>
+    {% include 'partials/theme-switcher.njk' %}
   </div>
+
 </aside>
