--- a/.app/pages/n.njk
+++ b/.app/pages/n.njk
@@ -21,3 +21,7 @@ panel: false
     </ul>
   </div>
 </main>
+
+<div class="theme-switcher-container">
+  {% include 'partials/theme-switcher.njk' %}
+</div>
