--- a/.app/pages/tag.njk
+++ b/.app/pages/tag.njk
@@ -25,3 +25,7 @@ panel: false
     </ul>
   </div>
 </main>
+
+<div class="theme-switcher-container">
+  {% include 'partials/theme-switcher.njk' %}
+</div>
