update class name of notes action buttons, update header nav toggle icon

--- a/.app/_includes/macros/bookmark-toggle.njk
+++ b/.app/_includes/macros/bookmark-toggle.njk
@@ -2,7 +2,7 @@
   <button
     x-data x-cloak
     type="button"
-    class="toggle-btn"
+    class="addn-action"
     :aria-pressed="$store.bookmarks.is('{{ id }}')"
     aria-label="Bookmark"
     @click="$store.bookmarks.toggle('{{ id }}')"
