--- a/.app/_includes/partials/nav-toggle.njk
+++ b/.app/_includes/partials/nav-toggle.njk
@@ -5,7 +5,30 @@
     @click="$store.nav.toggle()"
     x-cloak
   >
-    {{ 'menu' | feather | safe }}
+    
+    {# Note: 
+    
+      {{ 'menu' | feather | safe }} wasn't used because it only has three lines. However, I needed four lines for the animation I had in mind. So I modified the menu feather icon and duplicated a line.
+    
+    #}
+
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="1.125em"
+      height="1.125em"
+      viewBox="0 0 24 24"
+      fill="none"
+      stroke="currentColor"
+      stroke-width="2"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      class="feather feather-menu"
+    >
+      <line x1="3" y1="6" x2="21" y2="6"></line>
+      <line x1="3" y1="12" x2="21" y2="12"></line>
+      <line x1="3" y1="12" x2="21" y2="12"></line>
+      <line x1="3" y1="18" x2="21" y2="18"></line>
+    </svg>
     <span class="visually-hidden">Menu</span>
   </button>
 </div>
