--- a/.app/_includes/partials/sidebar.njk
+++ b/.app/_includes/partials/sidebar.njk
@@ -1,11 +1,21 @@
 {% from 'macros/sidebar-tree.njk' import sidebarTree %}
 
-<aside>
+<aside class="stack">
   <h2 class="visually-hidden">Navigation</h2>
 
-  <nav aria-labelledby="app:sidebar:nav" class="nav-section">
-    <h3 id="app:sidebar:nav" class="visually-hidden">Main</h3>
-    <ul class="nav-list" role="list" aria-labelledby="app:sidebar:nav">
+  <nav
+    aria-labelledby="app:sidebar:nav"
+    class="nav-section"
+  >
+    <h3
+      id="app:sidebar:nav"
+      class="visually-hidden">Main</h3
+    >
+    <ul
+      class="nav-list"
+      role="list"
+      aria-labelledby="app:sidebar:nav"
+    >
       <li>
         <a
           href="/"
@@ -19,8 +29,8 @@
       </li>
       <li>
         <a
-          href="/n/"
-          {{ '/n/' | ariaCurrent }}
+          href="/notes/"
+          {{ '/notes/' | ariaCurrent }}
           class="nav-list__link"
         >
           {{ 'file-text' | featherRef | safe }}
@@ -53,9 +63,19 @@
   </nav>
 
   {% if app.sidebar.links.length %}
-    <nav aria-labelledby="app:sidebar:section:links" class="nav-section nav-section--continued">
-      <h3 id="app:sidebar:section:links" class="visually-hidden">Links</h3>
-      <ul class="nav-list" role="list" aria-labelledby="app:sidebar:section:links">
+    <nav
+      aria-labelledby="app:sidebar:section:links"
+      class="nav-section"
+    >
+      <h3
+        id="app:sidebar:section:links"
+        class="nav-section__title">Socials</h3
+      >
+      <ul
+        class="nav-list"
+        role="list"
+        aria-labelledby="app:sidebar:section:links"
+      >
         {% for item in app.sidebar.links %}
           <li>
             <a
@@ -73,9 +93,20 @@
   {% endif %}
 
   <template x-if="$store.bookmarks.items.length">
-    <nav aria-labelledby="app:sidebar:section:bookmarks" class="nav-section" x-cloak>
-      <h3 id="app:sidebar:section:bookmarks" class="nav-section__title">Bookmarks</h3>
-      <ul class="nav-list" role="list" aria-labelledby="app:sidebar:section:bookmarks">
+    <nav
+      aria-labelledby="app:sidebar:section:bookmarks"
+      class="nav-section"
+      x-cloak
+    >
+      <h3
+        id="app:sidebar:section:bookmarks"
+        class="nav-section__title">Bookmarks</h3
+      >
+      <ul
+        class="nav-list"
+        role="list"
+        aria-labelledby="app:sidebar:section:bookmarks"
+      >
         <template x-for="bkm in $store.bookmarks.items">
           <li>
             <a :href="bkm" class="nav-list__link">
@@ -89,8 +120,14 @@
   </template>
 
   {% if collections._sidebarNotes.length %}
-    <nav aria-labelledby="app:sidebar:section:notes" class="nav-section">
-      <h3 id="app:sidebar:section:notes" class="nav-section__title">Notes</h3>
+    <nav
+      aria-labelledby="app:sidebar:section:notes"
+      class="nav-section"
+    >
+      <h3
+        id="app:sidebar:section:notes"
+        class="nav-section__title">Notes</h3
+      >
       {% for group in collections._sidebarNotes %}
         <div
           class="nav-group"
@@ -101,7 +138,10 @@
           data-expanded="true"
         >
           {% if group.label %}
-            <h4 class="nav-group__title" id="app:sidebar:section:notes:group:{{ group.id }}:title">
+            <h4
+              class="nav-group__title"
+              id="app:sidebar:section:notes:group:{{ group.id }}:title"
+            >
               <button
                 type="button"
                 class="nav-group__toggle" 
@@ -126,9 +166,19 @@
   {% endif %}
 
   {% if collections.tags.length %}
-    <nav aria-labelledby="app:sidebar:section:tags" class="nav-section">
-      <h3 id="app:sidebar:section:tags" class="nav-section__title">Tags</h3>
-      <ul class="nav-list" role="list" aria-labelledby="app:sidebar:section:tags">
+    <nav
+      aria-labelledby="app:sidebar:section:tags"
+      class="nav-section"
+    >
+      <h3
+        id="app:sidebar:section:tags"
+        class="nav-section__title">Tags</h3
+      >
+      <ul
+        class="nav-list"
+        role="list"
+        aria-labelledby="app:sidebar:section:tags"
+      >
         {% for tag in collections.tags %}
         <li>
           <a
