update css utils

--- a/.app/_includes/layouts/note.njk
+++ b/.app/_includes/layouts/note.njk
@@ -12,7 +12,7 @@
 {% from 'macros/datetime.njk' import datetime %}
 
 <main class="app-layout__main" id="app-content">
-  <div class="page content-block">
+  <div class="page content-wrapper">
     <article class="flow">
       <header class="flow">
         <h1 class="page__title">{{ title or page.fileSlug }}</h1>
