--- a/.app/_includes/partials/panel.njk
+++ b/.app/_includes/partials/panel.njk
@@ -1,7 +1,7 @@
 {% from 'macros/bookmark-toggle.njk' import bookmarkToggle %}
 {% from 'macros/edit-this-note.njk' import editThisNote %}
 
-<aside class="content-block stack">
+<aside class="content-wrapper stack">
 
   {% if tags | length %}
   <div class="grouped-links">
