--- a/.app/css/5-utils/stack.scss
+++ b/.app/css/5-utils/stack.scss
@@ -1,12 +1,7 @@
-.stack > * {
-  --stack: var(--space-2);
-  margin-block: 0;
-}
-
-.stack > * + * {
-  margin-block-start: var(--stack) !important;
-}
-
-.stack[data-stack="6"] > * {
-  --stack: var(--space-6);
+:where(.stack) {
+	display: flex;
+	flex-direction: column;
+	gap: var(--stack-gap, 1em);
+	justify-content: var(--stack-vertical-alignment, flex-start);
+	align-items: var(--stack-horizontal-alignment, flex-start);
 }
