--- a/.app/pages/404.njk
+++ b/.app/pages/404.njk
@@ -8,7 +8,7 @@ panel: false
 {% from 'macros/search.njk' import searchInput %}
 
 <main class="app-layout__main" id="app-content">
-  <div class="page content-block">
+  <div class="page content-wrapper">
     <h1 class="page__title">Page not found (404)</h1>
     <p class="page__description">
       Sorry, the page you are looking for doesn't exist or has been moved.
