--- a/.app/pages/search.njk
+++ b/.app/pages/search.njk
@@ -8,7 +8,7 @@ panel: false
 {% from 'macros/search.njk' import searchInput %}
 
 <main class="app-layout__main" id="app-content">
-  <div class="page content-block">
+  <div class="page content-wrapper">
     <h1 class="page__title">Search</h1>
     {{ searchInput('inline') }}
   </div>
