--- a/.app/_includes/layouts/base.njk
+++ b/.app/_includes/layouts/base.njk
@@ -35,9 +35,10 @@ panel: true
 
     <script src="/app.js" data-base="{{ '/' | htmlBaseUrl }}"></script>
 
-    <div aria-hidden="true" hidden>
+    <div hidden>
       {{ 'hash' | feather({ id: 'icon-hash' }) | safe }}
       {{ 'file-text' | feather({ id: 'icon-file-text' }) | safe }}
+      {{ 'corner-down-left' | feather({ id: 'icon-corner-down-left' }) | safe }}
     </div>
   </body>
 </html>
