--- a/.app/_includes/macros/sidebar-tree.njk
+++ b/.app/_includes/macros/sidebar-tree.njk
@@ -1,24 +1,30 @@
 {% macro sidebarTree(tree, group, page) %}
-  <ul class="nav-list" role="list" aria-labelledby="app:sidebar:section:notes:group:{{ group.id }}:title">
-    {% for item in tree %}
+  <ul
+    class="nav-list stack"
+    role="list"
+    aria-labelledby="app:sidebar:section:notes:group:{{ group.id }}:title"
+  >
+    {% set items = tree | reverse %}
+    {% for item in items %}
       <li
         {% if item.children.length %}
-          x-data="collapsible('app:sidebar:section:notes:group:{{group.id}}:tree:{{item.$treeKey}}', {{ item.$treeExpanded }})"
+          x-data="collapsible('app:sidebar:section:notes:group:{{group.id }}:tree:{{item.$treeKey}}', {{ item.$treeExpanded }})"
         {% endif %}
       >
         {% if item.url %}
           <div class="nav-list__link-with-toggle">
             <a
+              class="nav-list__link"
               href="{{ item.url }}"
               {{ item.url | ariaCurrent(page) }}
-              class="nav-list__link"
             >
               <span>{{ item.title }}</span>
             </a>
             {% if item.children.length %}
+              {# removed "nav-list__link" class from the button below  #}
               <button
+                class="nav-list__toggle"
                 type="button"
-                class="nav-list__link nav-list__toggle"
                 aria-controls="app:sidebar:section:notes:group:{{ group.id }}:tree:{{ item.$treeKey }}:list"
                 aria-expanded="true"
                 :aria-expanded="expanded"
@@ -32,16 +38,18 @@
             {% endif %}
           </div>
         {% else %}
+          {# removed "nav-list__link" class from the button below  #}
           <button
+            class="nav-list__toggle grid"
             type="button"
-            class="nav-list__link nav-list__toggle"
+            data-type="icon-toggle"
             aria-controls="app:sidebar:section:notes:group:{{ group.id }}:tree:{{ item.$treeKey }}:list"
             aria-expanded="true"
             :aria-expanded="expanded"
             @click="toggle()"
           >
-            <span>{{ item.title }}</span>
             {{ 'chevron-right' | feather | safe }}
+            <span>{{ item.title }}</span>
           </button>
         {% endif %}
 
