update sidebar toggle markup

--- a/.app/_includes/partials/app-header.njk
+++ b/.app/_includes/partials/app-header.njk
@@ -18,6 +18,6 @@
     {% include 'partials/search-button.njk' %}
   </div>
 
-  {% include 'partials/nav-toggle.njk' %}
+  {% include 'partials/sidebar-toggle.njk' %}
 
 </header>
