update search button markup

--- a/.app/_includes/partials/search-button.njk
+++ b/.app/_includes/partials/search-button.njk
@@ -1,4 +1,7 @@
-<a href="/search/" class="icon-btn">
+<a
+  class="icon-btn cluster"
+  href="/search/"
+>
+  <span>Search</span>
   {{ 'search' | feather | safe }}
-  <span class="visually-hidden">Search</span>
 </a>
