update toc markup

--- a/.app/_includes/partials/toc.njk
+++ b/.app/_includes/partials/toc.njk
@@ -5,8 +5,9 @@
     <summary
       class="toc__label cluster"
       id="app-panel-toc"
+      aria-label="Table of Contents"
     >
-      <span>Table of Contents</span>
+      <span>On this page</span>
       {{ 'chevron-right' | feather | safe }}
     </summary>
     
