--- a/.app/pages/404.njk
+++ b/.app/pages/404.njk
@@ -7,14 +7,22 @@ panel: false
 
 {% from 'macros/search.njk' import searchInput %}
 
-<main class="app-layout__main" id="app-content">
-  <div class="page content-wrapper">
-    <h1 class="page__title">Page not found (404)</h1>
-    <p class="page__description">
-      Sorry, the page you are looking for doesn't exist or has been moved.
-      Try searching for what you are looking for:
-    </p>
+<main
+  id="main-content"
+  class="app-layout__main"
+>
+  <div class="page content-wrapper flow">
+    
+    <header class="flow">
+      <h1 class="page__title">Page not found (404)</h1>
+      <p class="page__description">
+        Sorry, the page you are looking for doesn't exist or has been moved.
+        Try searching for what you are looking for:
+      </p>
+    </header>
+
     {{ searchInput('inline') }}
+    
   </div>
 </main>
 
