update tag page markup

--- a/.app/pages/tag.njk
+++ b/.app/pages/tag.njk
@@ -16,7 +16,7 @@ panel: false
   id="main-content"
   class="app-layout__main"
 >
-  <div class="tags page content-wrapper">
+  <div class="page content-wrapper">
     
     <h1 class="page__title">
       {{ title }}
