update search macro

--- a/.app/_includes/macros/search.njk
+++ b/.app/_includes/macros/search.njk
@@ -11,8 +11,8 @@
   >
     {% if mode === 'overlay' %}
       <p class="search__kbd cluster">
-        Press <kbd>/</kbd>
-        <span class="visually-hidden">to activate search</span>
+        <span class="visually-hidden">Press "/" to activate search</span>
+        <kbd aria-hidden="true">/</kbd>
       </p>
     {% endif %}
     <input
