add a notes archive link to the side panel

--- a/.app/_includes/partials/panel.njk
+++ b/.app/_includes/partials/panel.njk
@@ -128,6 +128,17 @@
   </div>
   {% endif %}
 
+  <a
+    href="/notes/"
+    class="grid"
+    data-type="icon-link"
+    data-padding-variant="3xs"
+  >
+    {{ 'arrow-left' | feather | safe }}
+    Notes Archive
+  </a>
+
+
   <div class="actions cluster">
     <div class="cluster">
       {{ bookmarkToggle(page.url | htmlBaseUrl ) }}
