wrap the h1 in a page__header class

--- a/.app/_includes/layouts/home.njk
+++ b/.app/_includes/layouts/home.njk
@@ -6,7 +6,7 @@ layout: "layouts/base.njk"
   <div class="page content-wrapper">
     <article class="flow">
 
-      <header class="flow">
+      <header class="page__header flow">
         <h1 class="page__title">Hello 👋🏽</h1>
         <div class="page__description">
           {{ description | md | safe}}
