--- a/.app/_includes/layouts/note.njk
+++ b/.app/_includes/layouts/note.njk
@@ -14,7 +14,7 @@
   <div class="page content-wrapper">
     <article class="flow">
       
-      <header class="flow">
+      <header class="page__header flow">
         <h1 class="page__title">{{ title or page.fileSlug }}</h1>
         <div class="meta-info">
           <span class="visually-hidden">
