--- a/.app/pages/search.njk
+++ b/.app/pages/search.njk
@@ -9,8 +9,13 @@ panel: false
 
 <main class="app-layout__main" id="main-content">
   <div class="page content-wrapper">
-    <h1 class="page__title">Search</h1>
+
+    <header class="page__header">
+      <h1 class="page__title">Search</h1>
+    </header>
+
     {{ searchInput('inline') }}
+
   </div>
 </main>
 
