--- a/.app/pages/tag.njk
+++ b/.app/pages/tag.njk
@@ -18,12 +18,14 @@ panel: false
 >
   <div class="page content-wrapper">
     
-    <h1 class="page__title">
-      {{ title }}
-      <small>
-        ({{ collections[tag.title] | length }})
-      </small>
-    </h1>
+    <header class="page__header">
+      <h1 class="page__title">
+        {{ title }}
+        <small>
+          ({{ collections[tag.title] | length }})
+        </small>
+      </h1>
+    </header>
     
     <ul
       class="notes-list flow"
