--- a/.app/pages/tags.njk
+++ b/.app/pages/tags.njk
@@ -12,12 +12,14 @@ panel: false
 >
   <div class="page content-wrapper">
     
-    <h1 class="page__title">
-      Tags
-      <small>
-        ({{ collections.tags | length }})
-      </small>
-    </h1>
+    <header class="page__header">
+      <h1 class="page__title">
+        Tags
+        <small>
+          ({{ collections.tags | length }})
+        </small>
+      </h1>
+    </header>
     
     <div class="tags-list-container flow">
       <ul
