--- a/.app/pages/404.njk
+++ b/.app/pages/404.njk
@@ -13,7 +13,7 @@ panel: false
 >
   <div class="page content-wrapper flow">
     
-    <header class="flow">
+    <header class="page__header flow">
       <h1 class="page__title">Page not found (404)</h1>
       <p class="page__description">
         Sorry, the page you are looking for doesn't exist or has been moved.
